--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "redux": "^4.1.2"
   }
 }
