--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.26.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   }
 }
