--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-final-form": "^6.5.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
   }
