--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "01_educational-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Myakis/social-network-app",
+  "homepage": "https://myakis.github.io/social-network-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
