--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^0.26.1",
     "final-form": "^4.20.6",
     "gh-pages": "^3.2.3",
+    "react-content-loader": "^6.2.0",
     "react-final-form": "^6.5.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
