--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "reselect": "^4.1.5",
+    "tsc": "^2.0.4",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
