--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-final-form-listeners": "^1.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
