--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@types/react-final-form-listeners": "^1.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^8.3.4",
     "formik": "^2.2.9",
+    "node-sass": "^7.0.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^9.1.0",
     "react-scripts": "5.0.0",
     "reselect": "^4.1.5",
     "tsc": "^2.0.4",
     "typescript": "^4.6.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
