--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "query-string": "^7.1.1",
@@ -22,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^9.1.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.2",
     "reselect": "^4.1.5",
     "tsc": "^2.0.4",
     "typescript": "^4.6.3",
